--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ayu-dark-purple",
   "displayName": "Ayu Dark Purple",
   "description": "Ayu Dark Theme with Purple",
+  "repository": "https://github.com/Tul-1/ayu-dark-purple",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.85.0"
