--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ayu Dark Theme with Purple",
   "repository": "https://github.com/Tul-1/ayu-dark-purple",
   "keywords": ["Ayu", "Dark", "Purple", "Theme"],
+  "publisher": "Tul",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.85.0"
